--- a/package.json
+++ b/package.json
@@ -46,6 +46,12 @@
   "react-dom": "^19.2.0",
  
    
+  "react-icons": "^5.5.0",
+ 
+   
+  "react-player": "^3.4.0",
+ 
+   
   "react-router-dom": "^7.11.0",
  
    
