--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-VITE_API_URL="http://192.168.0.112:5000"
+VITE_API_URL="https://api.izhaarlove.com"
 REACT_APP_RAZORPAY_KEY_ID=rzp_test_Rt2p9OZv2KbFMZ
