--- a/package.json
+++ b/package.json
@@ -58,7 +58,10 @@
   "react-toastify": "^11.0.5",
  
    
-  "socket.io-client": "^4.8.3"
+  "socket.io-client": "^4.8.3",
+ 
+   
+  "three": "^0.182.0"
  
   },
  
