--- a/package.json
+++ b/package.json
@@ -61,7 +61,13 @@
   "react-router-dom": "^7.11.0",
  
    
+  "react-slick": "^0.31.0",
+ 
+   
   "react-toastify": "^11.0.5",
+ 
+   
+  "slick-carousel": "^1.8.1",
  
    
   "socket.io-client": "^4.8.3",
