--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-#  VITE_API_URL="https://api.izhaarlove.com"
-VITE_API_URL="http://192.168.0.103:5000"
+  VITE_API_URL="https://api.izhaarlove.com"
+# VITE_API_URL="http://192.168.0.103:5000"
 REACT_APP_RAZORPAY_KEY_ID=rzp_test_Rt2p9OZv2KbFMZ
