--- a/public/manifest.json
+++ b/public/manifest.json
@@ -10,7 +10,43 @@
     "icons": [
         {
             "src": "/izhaar-logo.png",
+            "sizes": "72x72",
+            "type": "image/png",
+            "purpose": "any"
+        },
+        {
+            "src": "/izhaar-logo.png",
+            "sizes": "96x96",
+            "type": "image/png",
+            "purpose": "any"
+        },
+        {
+            "src": "/izhaar-logo.png",
+            "sizes": "128x128",
+            "type": "image/png",
+            "purpose": "any"
+        },
+        {
+            "src": "/izhaar-logo.png",
+            "sizes": "144x144",
+            "type": "image/png",
+            "purpose": "any"
+        },
+        {
+            "src": "/izhaar-logo.png",
+            "sizes": "152x152",
+            "type": "image/png",
+            "purpose": "any"
+        },
+        {
+            "src": "/izhaar-logo.png",
             "sizes": "192x192",
+            "type": "image/png",
+            "purpose": "any maskable"
+        },
+        {
+            "src": "/izhaar-logo.png",
+            "sizes": "384x384",
             "type": "image/png",
             "purpose": "any"
         },
@@ -18,7 +54,23 @@
             "src": "/izhaar-logo.png",
             "sizes": "512x512",
             "type": "image/png",
-            "purpose": "any"
+            "purpose": "any maskable"
+        }
+    ],
+    "categories": [
+        "social",
+        "lifestyle"
+    ],
+    "shortcuts": [
+        {
+            "name": "Notifications",
+            "url": "/user/notifications",
+            "icons": [
+                {
+                    "src": "/izhaar-logo.png",
+                    "sizes": "192x192"
+                }
+            ]
         }
     ]
 }
